<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_rv_jugador_jugador"
            android:layout_width="303dp"
            android:layout_height="223dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/barza" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_rv_jugador_nombrej"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6sp"
                android:text="@string/nombre_jugador"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_rv_posicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6sp"
                android:text="@string/posicion"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_rv_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6sp"
                android:text="@string/edad"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_rv_sueldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6sp"
                android:text="@string/sueldo"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_rv_numCam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6sp"
                android:text="@string/numero_camiseta"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>